--- a/app/src/main/res/layout/object_item.xml
+++ b/app/src/main/res/layout/object_item.xml
@@ -16,6 +16,7 @@
             android:id="@+id/categoryImg"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:layout_gravity="center"
             android:src="@color/light_gray"
             android:layout_marginEnd="20dp"
             android:scaleType="centerCrop"
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textColor="@color/beige3"
-                android:text="Год"
+                android:text=""
                 android:fontFamily="@font/vollkorn_bold"
                 android:layout_marginBottom="5dp"/>
 
